[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/custom_ui/CustomTextureButton.gd" type="Script" id=1]
[ext_resource path="res://res/icons/icon_Plus.svg" type="Texture" id=2]
[ext_resource path="res://src/elements/list/List.gd" type="Script" id=3]
[ext_resource path="res://res/fonts/LargFont.tres" type="DynamicFont" id=4]

[node name="List" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -900.0
margin_right = 600.0
margin_bottom = 900.0
rect_min_size = Vector2( 1200, 1800 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1200.0
margin_bottom = 1800.0

[node name="TitleEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 4 )

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 113.0
margin_right = 1200.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 1200.0
margin_bottom = 1672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1200.0
margin_bottom = 1559.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
margin_top = 1680.0
margin_right = 1200.0
margin_bottom = 1800.0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 3
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
toggle = false
c_color = "Green"

[node name="SortButton" type="Button" parent="."]
visible = false
margin_right = 1200.0
margin_bottom = 43.0

[connection signal="text_entered" from="MarginContainer/VBoxContainer/TitleEdit" to="." method="_on_TitleEdit_text_entered"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/AddButton" to="MarginContainer/VBoxContainer/AddButton" method="_on_CustomTextureButton_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/AddButton" to="MarginContainer/VBoxContainer/AddButton" method="_on_CustomTextureButton_button_up"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/AddButton" to="MarginContainer/VBoxContainer/AddButton" method="_on_CustomTextureButton_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/AddButton" to="MarginContainer/VBoxContainer/AddButton" method="_on_CustomTextureButton_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
